Hero: update rotating 'I am' list per spec

--- a/index.html
+++ b/index.html
@@ -5419,7 +5419,7 @@
             <div class="hero-content">
                 <h1 class="animated-heading">Joshua McKenzie German</h1>
                 <div class="rotating-text">
-                    <p class="subtitle">I am a <span id="text-rotation">Creative Strategist</span></p>
+                    <p class="subtitle">I am <span id="text-rotation">curious</span></p>
                 </div>
                 <p class="hero-description">From Southern roots to global impact, crafting stories and strategies that redefine brands and inspire change.</p>
                 <div class="cta-container">
@@ -7327,15 +7327,16 @@
             const textRotation = document.getElementById('text-rotation');
             if (textRotation) {
                 const texts = [
-                    'Curious',
-                    'Creative',
-                    'Creative Strategist',
-                    'Brand Storyteller', 
-                    'Cultural Connector',
-                    'Visual Artist',
-                    'Podcast Host',
-                    'Vibe Coder',
-                    'Strategic Thinker'
+                    'curious',
+                    'creative',
+                    'a strategist',
+                    'a storyteller',
+                    'a Vibe Coder',
+                    'a journalist',
+                    'a photographer',
+                    'a podcaster',
+                    'a polymath',
+                    'myself'
                 ];
                 let currentIndex = 0;
                 
