--- a/index.html
+++ b/index.html
@@ -5419,7 +5419,7 @@
             <div class="hero-content">
                 <h1 class="animated-heading">Joshua McKenzie German</h1>
                 <div class="rotating-text">
-                    <p class="subtitle">I am <span id="text-rotation">CURIOUS</span></p>
+                    <p class="subtitle">I am <span id="text-rotation">Curious</span></p>
                 </div>
                 <p class="hero-description">From Southern roots to global impact, crafting stories and strategies that redefine brands and inspire change.</p>
                 <div class="cta-container">
@@ -7327,16 +7327,16 @@
             const textRotation = document.getElementById('text-rotation');
             if (textRotation) {
                 const texts = [
-                    'CURIOUS',
-                    'CREATIVE',
-                    'A STRATEGIST',
-                    'A STORYTELLER',
-                    'A VIBE CODER',
-                    'A JOURNALIST',
-                    'A PHOTOGRAPHER',
-                    'A PODCASTER',
-                    'A POLYMATH',
-                    'MYSELF'
+                    'Curious',
+                    'Creative',
+                    'a Strategist',
+                    'a Storyteller',
+                    'a Vibe Coder',
+                    'a Journalist',
+                    'a Photographer',
+                    'a Podcaster',
+                    'a Polymath',
+                    'myself'
                 ];
                 let currentIndex = 0;
                 
