Copy: hero option B, micro lead-in C, About (85% opt3 + 15% opt1), Photo Approach (70/30 A+C), footer tagline/disclaimer, meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Joshua McKenzie German - Creative Strategist & Polymath. Explore my work in branding, podcasting, and photography.">
+    <meta name="description" content="Joshua McKenzie German — Creative Strategist, Visual Storyteller, and Futurist. Explore work in branding, photography, and culture.">
     <meta name="keywords" content="Joshua McKenzie German, creative strategist, polymath, branding, podcast, photography, TBWA Chiat Day, Dominate the Decade">
     <meta name="author" content="Joshua McKenzie German">
     <title>Joshua McKenzie German | Creative Strategist</title>
@@ -5421,7 +5421,7 @@
                 <div class="rotating-text">
                     <p class="subtitle">I am <span id="text-rotation">Curious</span></p>
                 </div>
-                <p class="hero-description">From Southern roots to global impact, crafting stories and strategies that redefine brands and inspire change.</p>
+                <p class="hero-description">A step into my world: ideas, stories, and strategies built to shape what’s next.</p>
                 <div class="cta-container">
                     <a href="#photo-approach" class="cta-button primary" aria-label="See My Portfolio">
                         <span>See My Portfolio</span>
@@ -5444,6 +5444,13 @@
             </div>
         </section>
 
+        <!-- Micro Lead-in -->
+        <section class="section" style="padding-top: 1.25rem; padding-bottom: 1.25rem;">
+            <div class="section-container text-center">
+                <p class="small-text" style="color: var(--darker-text); max-width: 820px; margin: 0 auto;">A living notebook of curiosity, strategy, and story.</p>
+            </div>
+        </section>
+
         <!-- About Section -->
         <section id="about-me" class="section">
             <div class="section-container">
@@ -5453,8 +5460,8 @@
                 </div>
                 <div class="grid col-2">
                     <div class="fade-in">
-                        <p class="large-text">My journey began in Columbia, South Carolina, where Southern storytelling shaped my creative lens. Now, as a Senior Connections Strategist at TBWA\Chiat\Day in Los Angeles, I bring a global mindset to my work, honed at agencies like Wieden + Kennedy and Goodby, Silverstein & Partners.</p>
-                        <p class="large-text">A University of South Carolina grad (B.A. Mass Communications, 2020), I'm driven by curiosity, community, DE&I, and cutting-edge tech like AI and Web3. My work has earned a 2024 Cannes Titanium Grand Prix, but my mission is connecting people, ideas, and cultures—always with a story worth telling.</p>
+                        <p class="large-text">I’ve always been curious—books, interviews, and the in‑between moments. Journalism at the University of South Carolina sharpened how I gather and tell stories. Strategy gave me the language to turn them into outcomes. Today, I help brands communicate with precision and warmth—leading work that travels globally and lands locally. I grew up in Columbia, South Carolina—where storytelling runs deep—and I’ve kept a camera in my hand and a notebook close by ever since.</p>
+                        <p class="large-text">Now, as a Senior Connections Strategist at TBWA\Chiat\Day in Los Angeles (with past chapters at Wieden+Kennedy and Goodby, Silverstein & Partners), I bring a global mindset to the work. I’m driven by community, clarity, and what’s next—using tools like AI and emergent tech with intention. The goal is simple: meaningful work that moves people and moves the brand.</p>
                         
                         <h3 class="mt-md mb-sm">Skills & Expertise</h3>
                         <div style="background: rgba(255,255,255,0.03); border-radius: var(--radius-md); padding: var(--space-md); border-left: 2px solid var(--accent-color);">
@@ -5548,8 +5555,8 @@
                 <div class="section-header text-center">
                     <h2 class="section-title">My Photographic Approach</h2>
                     <div class="section-description">
-                        <p>Photography is about capturing authentic moments and telling stories through visual narrative. Whether it's the raw energy of a live event, the intimate connection in a portrait, or the breathtaking beauty of a landscape, I approach each shot with intention and creativity.</p>
-                        <p>My style blends documentary authenticity with artistic vision, always seeking to reveal the deeper story within each frame.</p>
+                        <p>I document moments in time—portraits with pulse, events with energy, and landscapes that honor Mother Earth. I look for truth, beauty, and context in every frame.</p>
+                        <p>Photography is how I listen: to faces, to crowds, to the land itself. I aim for images that feel lived‑in and inevitable.</p>
                     </div>
                 </div>
                 
@@ -6550,7 +6557,7 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <a href="#hero" class="footer-logo">Joshua McKenzie German</a>
-                    <p class="footer-tagline">Creative Strategist & Polymath</p>
+                    <p class="footer-tagline">Creative Strategist • Visual Storyteller • Futurist</p>
                     <p class="footer-description">From Southern roots to global impact, crafting stories and strategies that redefine brands and inspire change.</p>
                 </div>
                 <div class="footer-newsletter">
@@ -6588,7 +6595,7 @@
                 <div class="footer-legal"><a href="#" class="legal-link">Privacy Policy</a><a href="#" class="legal-link">Terms of Use</a></div>
                 <a href="#hero" class="back-to-top" aria-label="Back to Top"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="19" x2="12" y2="5"></line><polyline points="5 12 12 5 19 12"></polyline></svg></a>
                 <div class="footer-disclaimer" style="flex-basis:100%; opacity:.75; font-size:.9rem; margin-top:8px; text-align:center;">
-                    <p>Curious &amp; Creative note: if anything on this site doesn't work, forgive me — I vibe coded this site.</p>
+                    <p>If anything on this site doesn’t work, forgive me — I coded this site from scratch.</p>
                 </div>
             </div>
         </div>
