--- a/index.html
+++ b/index.html
@@ -4691,16 +4691,18 @@
         /* Photography - Artistic Masonry Revamp */
         .photo-controls { text-align: center; margin: var(--space-md) 0 var(--space-lg); }
         .photo-filter-btn {
-            padding: 0.5rem 1rem;
-            margin: 0 0.25rem 0.5rem;
-            border: 1px solid rgba(255,255,255,0.15);
-            background: rgba(255,255,255,0.03);
+            padding: 0.6rem 1.1rem;
+            margin: 0 0.3rem 0.6rem;
+            border: 1px solid rgba(255,255,255,0.18);
+            background: rgba(255,255,255,0.06);
             color: var(--darker-text);
             border-radius: var(--radius-round);
-            cursor: pointer; transition: all 180ms ease;
+            cursor: pointer; transition: all 200ms ease;
+            font-weight: 600;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.15);
         }
-        .photo-filter-btn:hover { color: white; border-color: var(--accent-color); box-shadow: 0 6px 18px rgba(92,225,230,0.18); transform: translateY(-1px); }
-        .photo-filter-btn.active { background: var(--accent-color); color: #0b0b0f; border-color: transparent; }
+        .photo-filter-btn:hover { color: white; border-color: var(--accent-color); box-shadow: 0 8px 20px rgba(92,225,230,0.22); transform: translateY(-2px); }
+        .photo-filter-btn.active { background: var(--accent-color); color: #0b0b0f; border-color: transparent; box-shadow: 0 10px 24px rgba(255,107,107,0.35); }
 
         .photography-gallery { column-count: 3; column-gap: 16px; }
         .photo-tile { display: inline-block; width: 100%; margin: 0 0 16px; break-inside: avoid; border-radius: var(--radius-md); overflow: hidden; position: relative; border: 1px solid rgba(255,255,255,0.06); background: rgba(255,255,255,0.03); opacity: 1; transform: translateY(0); transition: opacity 200ms ease, transform 200ms ease; }
@@ -5572,6 +5574,7 @@
                 <!-- Filter Pills and Masonry Gallery -->
                 <div class="photo-controls">
                     <button class="photo-filter-btn" data-photo-filter="portraits">Portraits</button>
+                    <button class="photo-filter-btn" data-photo-filter="headshots">Headshots</button>
                     <button class="photo-filter-btn" data-photo-filter="fashion">Fashion</button>
                     <button class="photo-filter-btn active" data-photo-filter="landscape">Landscape</button>
                     <button class="photo-filter-btn" data-photo-filter="events">Events</button>
@@ -7231,6 +7234,9 @@
                 const portraits = [
                     'Images/Portraits/JMG_0436.jpg','Images/Portraits/JMG_0879.jpg','Images/Portraits/JMG_1371.jpg','Images/Portraits/JMG_1430.jpg','Images/Portraits/JMG_1520.jpg','Images/Portraits/JMG_1547.jpg','Images/Portraits/JMG_1723.jpg','Images/Portraits/JMG_1742.jpg','Images/Portraits/JMG_1759.jpg','Images/Portraits/JMG_1763.jpg','Images/Portraits/JMG_1787.jpg','Images/Portraits/JMG_1789.jpg','Images/Portraits/JMG_1790.jpg','Images/Portraits/JMG_1820.jpg','Images/Portraits/JMG_1835.jpg','Images/Portraits/JMG_2744.jpg','Images/Portraits/JMG_2914.jpg','Images/Portraits/JMG_5476.jpg','Images/Portraits/JMG_6968.jpg','Images/Portraits/JMG_6994.jpg','Images/Portraits/JMG_8011.jpg','Images/Portraits/JMG_8044.jpg','Images/Portraits/JMG_8074.jpg','Images/Portraits/JMG_8078.jpg','Images/Portraits/JMG_8318.jpg','Images/Portraits/JMG_8611.jpg','Images/Portraits/JMG_8750.jpg','Images/Portraits/JMG_8929.jpg','Images/Portraits/JMG_9553.jpg'
                 ];
+                const headshots = [
+                    // Add headshot image paths here later
+                ];
                 const fashion = [
                     'Images/Fashion Photos/JMG_1511.jpg','Images/Fashion Photos/JMG_1601.jpg','Images/Fashion Photos/JMG_1607.jpg','Images/Fashion Photos/JMG_2938.jpg','Images/Fashion Photos/JMG_2971-3.jpg','Images/Fashion Photos/JMG_2986.jpg','Images/Fashion Photos/JMG_2990.jpg','Images/Fashion Photos/JMG_3029.jpg','Images/Fashion Photos/JMG_3641.jpg','Images/Fashion Photos/JMG_3729.jpg','Images/Fashion Photos/JMG_3984.jpg','Images/Fashion Photos/JMG_4379.jpg','Images/Fashion Photos/JMG_7818.jpg','Images/Fashion Photos/JMG_8075.jpg','Images/Fashion Photos/JMG_8083.jpg','Images/Fashion Photos/JMG_8149.jpg','Images/Fashion Photos/JMG_8986.jpg'
                 ];
@@ -7268,6 +7274,7 @@
                 }
 
                 addGroup(portraits, 'portraits');
+                addGroup(headshots, 'headshots');
                 addGroup(fashion, 'fashion');
                 addGroup(landscape, 'landscape');
                 addGroup(events, 'events');
