--- a/index.html
+++ b/index.html
@@ -5340,14 +5340,26 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#podcast" class="nav-link" data-text="Podcast">
+                        <a href="#writing" class="nav-link" data-text="Writing">
                             <span class="nav-num">04</span>
+                            <span class="nav-text">Writing</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#ai-projects" class="nav-link" data-text="AI Projects">
+                            <span class="nav-num">05</span>
+                            <span class="nav-text">AI Projects</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#podcast" class="nav-link" data-text="Podcast">
+                            <span class="nav-num">06</span>
                             <span class="nav-text">Podcast</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link" data-text="Contact">
-                            <span class="nav-num">05</span>
+                            <span class="nav-num">07</span>
                             <span class="nav-text">Contact</span>
                         </a>
                     </li>
@@ -5391,14 +5403,26 @@
                     </a>
                 </li>
                 <li class="mobile-nav-item" style="--i: 3;">
-                    <a href="#podcast" class="mobile-nav-link">
+                    <a href="#writing" class="mobile-nav-link">
                         <span class="mobile-nav-num">04</span>
-                        <span class="mobile-nav-text">Podcast</span>
+                        <span class="mobile-nav-text">Writing</span>
                     </a>
                 </li>
                 <li class="mobile-nav-item" style="--i: 4;">
-                    <a href="#contact" class="mobile-nav-link">
+                    <a href="#ai-projects" class="mobile-nav-link">
                         <span class="mobile-nav-num">05</span>
+                        <span class="mobile-nav-text">AI Projects</span>
+                    </a>
+                </li>
+                <li class="mobile-nav-item" style="--i: 5;">
+                    <a href="#podcast" class="mobile-nav-link">
+                        <span class="mobile-nav-num">06</span>
+                        <span class="mobile-nav-text">Podcast</span>
+                    </a>
+                </li>
+                <li class="mobile-nav-item" style="--i: 6;">
+                    <a href="#contact" class="mobile-nav-link">
+                        <span class="mobile-nav-num">07</span>
                         <span class="mobile-nav-text">Contact</span>
                     </a>
                 </li>
@@ -5442,6 +5466,92 @@
                     <span class="arrow"></span>
                     <span class="arrow"></span>
                     <span class="arrow"></span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Writing Section -->
+        <section id="writing" class="section">
+            <div class="section-container">
+                <div class="section-header fade-in text-center">
+                    <span class="section-subtitle">Words & Point of View</span>
+                    <h2 class="section-title">Writing</h2>
+                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Articles from The Daily Gamecock, film reviews on Letterboxd, Substack essays, and other pieces where I explore culture, creativity, and strategy.</p>
+                </div>
+
+                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
+                    <!-- Daily Gamecock -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="The Daily Gamecock">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">The Daily Gamecock</h3>
+                            <p class="card-text">Student journalism: reporting, features, and interviews that sharpened my ear for story.</p>
+                            <span class="card-cta">View articles →</span>
+                        </div>
+                    </a>
+
+                    <!-- Letterboxd Reviews -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Letterboxd Reviews">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: url('https://a.ltrbxd.com/logos/letterboxd-decal-dots-pos-rgb.svg') center/120px no-repeat, linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Letterboxd Reviews</h3>
+                            <p class="card-text">Film as culture lab—quick takes and longer reflections logged in public.</p>
+                            <span class="card-cta">Read reviews →</span>
+                        </div>
+                    </a>
+
+                    <!-- Substack Essays -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Substack Essays">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Substack</h3>
+                            <p class="card-text">Longer-form thinking: culture, community, technology, and the work we make.</p>
+                            <span class="card-cta">Visit Substack →</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- AI Projects Section -->
+        <section id="ai-projects" class="section">
+            <div class="section-container">
+                <div class="section-header fade-in text-center">
+                    <span class="section-subtitle">Tools, Play, and Prototypes</span>
+                    <h2 class="section-title">AI Projects</h2>
+                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Experiments and utilities—from strategy helpers to small creative tools. Linked to GitHub with lightweight previews.</p>
+                </div>
+
+                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
+                    <!-- Project Card 1 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(92,225,230,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Strategy Prompt Kit</h3>
+                            <p class="card-text">A curated set of reusable prompts and flows for faster, sharper briefs.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
+                    </a>
+
+                    <!-- Project Card 2 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(255,107,107,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Deck Builder (WIP)</h3>
+                            <p class="card-text">Auto-structures a narrative deck from notes; exports to Keynote/Slides.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
+                    </a>
+
+                    <!-- Project Card 3 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(78,205,196,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Photo Contact Sheet</h3>
+                            <p class="card-text">Tiny tool: drag in photos, get a high-contrast printable contact sheet.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
