Reorder: move Writing and AI Projects below Brand Work; link Daily Gamecock page

--- a/index.html
+++ b/index.html
@@ -5471,7 +5471,7 @@
         </section>
 
         <!-- Writing Section -->
-        <section id="writing" class="section">
+        <section id="writing" class="section" style="scroll-margin-top: 80px;">
             <div class="section-container">
                 <div class="section-header fade-in text-center">
                     <span class="section-subtitle">Words & Point of View</span>
@@ -5481,7 +5481,7 @@
 
                 <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
                     <!-- Daily Gamecock -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="The Daily Gamecock">
+                    <a href="https://www.dailygamecock.com/staff/josh-german" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="The Daily Gamecock">
                         <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
                         <div class="card-body">
                             <h3 class="card-title">The Daily Gamecock</h3>
@@ -5832,6 +5832,92 @@
                     <a href="#contact" class="btn btn-primary">
                         <span>Let's Create Something Together</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn-icon"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Writing Section (moved below Brand Work) -->
+        <section id="writing" class="section" style="scroll-margin-top: 80px;">
+            <div class="section-container">
+                <div class="section-header fade-in text-center">
+                    <span class="section-subtitle">Words & Point of View</span>
+                    <h2 class="section-title">Writing</h2>
+                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Articles from The Daily Gamecock, film reviews on Letterboxd, Substack essays, and other pieces where I explore culture, creativity, and strategy.</p>
+                </div>
+
+                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
+                    <!-- Daily Gamecock -->
+                    <a href="https://www.dailygamecock.com/staff/josh-german" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="The Daily Gamecock">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">The Daily Gamecock</h3>
+                            <p class="card-text">Student journalism: reporting, features, and interviews that sharpened my ear for story.</p>
+                            <span class="card-cta">View articles →</span>
+                        </div>
+                    </a>
+
+                    <!-- Letterboxd Reviews -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Letterboxd Reviews">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: url('https://a.ltrbxd.com/logos/letterboxd-decal-dots-pos-rgb.svg') center/120px no-repeat, linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Letterboxd Reviews</h3>
+                            <p class="card-text">Film as culture lab—quick takes and longer reflections logged in public.</p>
+                            <span class="card-cta">Read reviews →</span>
+                        </div>
+                    </a>
+
+                    <!-- Substack Essays -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Substack Essays">
+                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Substack</h3>
+                            <p class="card-text">Longer-form thinking: culture, community, technology, and the work we make.</p>
+                            <span class="card-cta">Visit Substack →</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- AI Projects Section (moved below Brand Work) -->
+        <section id="ai-projects" class="section">
+            <div class="section-container">
+                <div class="section-header fade-in text-center">
+                    <span class="section-subtitle">Tools, Play, and Prototypes</span>
+                    <h2 class="section-title">AI Projects</h2>
+                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Experiments and utilities—from strategy helpers to small creative tools. Linked to GitHub with lightweight previews.</p>
+                </div>
+
+                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
+                    <!-- Project Card 1 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(92,225,230,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Strategy Prompt Kit</h3>
+                            <p class="card-text">A curated set of reusable prompts and flows for faster, sharper briefs.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
+                    </a>
+
+                    <!-- Project Card 2 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(255,107,107,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Deck Builder (WIP)</h3>
+                            <p class="card-text">Auto-structures a narrative deck from notes; exports to Keynote/Slides.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
+                    </a>
+
+                    <!-- Project Card 3 -->
+                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
+                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(78,205,196,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
+                        <div class="card-body">
+                            <h3 class="card-title">Photo Contact Sheet</h3>
+                            <p class="card-text">Tiny tool: drag in photos, get a high-contrast printable contact sheet.</p>
+                            <span class="card-cta">View on GitHub →</span>
+                        </div>
                     </a>
                 </div>
             </div>
