Order: About first after Hero; move Writing/AI Projects after Brand Work; wire Daily Gamecock + Letterboxd links; prep for Daily Gamecock previews

--- a/index.html
+++ b/index.html
@@ -5491,7 +5491,7 @@
                     </a>
 
                     <!-- Letterboxd Reviews -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Letterboxd Reviews">
+                    <a href="https://letterboxd.com/jgerms/" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Letterboxd Reviews">
                         <div class="card-media" style="aspect-ratio: 16/9; background: url('https://a.ltrbxd.com/logos/letterboxd-decal-dots-pos-rgb.svg') center/120px no-repeat, linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
                         <div class="card-body">
                             <h3 class="card-title">Letterboxd Reviews</h3>
@@ -5556,14 +5556,9 @@
             </div>
         </section>
 
-        <!-- Micro Lead-in -->
-        <section class="section" style="padding-top: 1.25rem; padding-bottom: 1.25rem;">
-            <div class="section-container text-center">
-                <p class="small-text" style="color: var(--darker-text); max-width: 820px; margin: 0 auto;">A living notebook of curiosity, strategy, and story.</p>
-            </div>
-        </section>
+        
 
-        <!-- About Section -->
+        <!-- About Section (first section after Hero) -->
         <section id="about-me" class="section">
             <div class="section-container">
                 <div class="section-header fade-in">
