Fix: remove duplicate Writing/AI under Brand Work; keep single Podcast; add DIRECTV Emmys OOH Hijack folder; update About Me copy; keep tab JS scoped

--- a/index.html
+++ b/index.html
@@ -5483,8 +5483,9 @@
                 </div>
                 <div class="grid col-2">
                     <div class="fade-in">
-                        <p class="large-text">I’ve always been curious—books, interviews, and the in‑between moments. Journalism at the University of South Carolina sharpened how I gather and tell stories. Strategy gave me the language to turn them into outcomes. Today, I help brands communicate with precision and warmth—leading work that travels globally and lands locally. I grew up in Columbia, South Carolina—where storytelling runs deep—and I’ve kept a camera in my hand and a notebook close by ever since.</p>
-                        <p class="large-text">Now, as a Senior Connections Strategist at TBWA\Chiat\Day in Los Angeles (with past chapters at Wieden+Kennedy and Goodby, Silverstein & Partners), I bring a global mindset to the work. I’m driven by community, clarity, and what’s next—using tools like AI and emergent tech with intention. The goal is simple: meaningful work that moves people and moves the brand.</p>
+                        <p class="large-text">Born and raised in South Carolina, I’ve always been a curious cat. Whether it’s a book in my hand, a podcast in my ears, or a camera at my side, I’ve always taken joy in learning more about the world around me and what makes it go round.</p>
+                        <p class="large-text">This curiosity has guided me through every stage of my life; from being an active member of the newspaper club in high school, to studying Journalism & Mass Communications at the University of South Carolina, where I minored in Information Science and served as assistant sports editor for The Daily Gamecock. It eventually led me into the world of advertising, where I’ve built a career in Strategy at some of the top agencies in the United States.</p>
+                        <p class="large-text">Now, living in Los Angeles, California, my curiosity fuels each of my creative pursuits: photography, podcasting, creative writing, movies & TV and building with Artificial Intelligence. I’m drawn to authentic storytelling that captures the present moment while honoring the past and building the future.</p>
                         
                         <h3 class="mt-md mb-sm">Skills & Expertise</h3>
                         <div style="background: rgba(255,255,255,0.03); border-radius: var(--radius-md); padding: var(--space-md); border-left: 2px solid var(--accent-color);">
@@ -5748,91 +5749,7 @@
             </div>
         </section>
 
-        <!-- Writing Section (moved below Brand Work) -->
-        <section id="writing" class="section" style="scroll-margin-top: 80px;">
-            <div class="section-container">
-                <div class="section-header fade-in text-center">
-                    <span class="section-subtitle">Words & Point of View</span>
-                    <h2 class="section-title">Writing</h2>
-                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Articles from The Daily Gamecock, film reviews on Letterboxd, Substack essays, and other pieces where I explore culture, creativity, and strategy.</p>
-                </div>
-
-                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
-                    <!-- Daily Gamecock -->
-                    <a href="https://www.dailygamecock.com/staff/josh-german" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="The Daily Gamecock">
-                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">The Daily Gamecock</h3>
-                            <p class="card-text">Student journalism: reporting, features, and interviews that sharpened my ear for story.</p>
-                            <span class="card-cta">View articles →</span>
-                        </div>
-                    </a>
-
-                    <!-- Letterboxd Reviews -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Letterboxd Reviews">
-                        <div class="card-media" style="aspect-ratio: 16/9; background: url('https://a.ltrbxd.com/logos/letterboxd-decal-dots-pos-rgb.svg') center/120px no-repeat, linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Letterboxd Reviews</h3>
-                            <p class="card-text">Film as culture lab—quick takes and longer reflections logged in public.</p>
-                            <span class="card-cta">Read reviews →</span>
-                        </div>
-                    </a>
-
-                    <!-- Substack Essays -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Substack Essays">
-                        <div class="card-media" style="aspect-ratio: 16/9; background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02)); border-radius: var(--radius-md);"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Substack</h3>
-                            <p class="card-text">Longer-form thinking: culture, community, technology, and the work we make.</p>
-                            <span class="card-cta">Visit Substack →</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- AI Projects Section (moved below Brand Work) -->
-        <section id="ai-projects" class="section">
-            <div class="section-container">
-                <div class="section-header fade-in text-center">
-                    <span class="section-subtitle">Tools, Play, and Prototypes</span>
-                    <h2 class="section-title">AI Projects</h2>
-                    <p class="section-description" style="max-width: 900px; margin: 0 auto; color: var(--darker-text);">Experiments and utilities—from strategy helpers to small creative tools. Linked to GitHub with lightweight previews.</p>
-                </div>
-
-                <div class="grid col-3 stagger-children" style="margin-top: var(--space-lg);">
-                    <!-- Project Card 1 -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
-                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(92,225,230,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Strategy Prompt Kit</h3>
-                            <p class="card-text">A curated set of reusable prompts and flows for faster, sharper briefs.</p>
-                            <span class="card-cta">View on GitHub →</span>
-                        </div>
-                    </a>
-
-                    <!-- Project Card 2 -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
-                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(255,107,107,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Deck Builder (WIP)</h3>
-                            <p class="card-text">Auto-structures a narrative deck from notes; exports to Keynote/Slides.</p>
-                            <span class="card-cta">View on GitHub →</span>
-                        </div>
-                    </a>
-
-                    <!-- Project Card 3 -->
-                    <a href="#" class="card hover-lift" target="_blank" rel="noopener noreferrer" aria-label="Project">
-                        <div class="card-media" style="aspect-ratio: 16/9; border-radius: var(--radius-md); background: radial-gradient(60% 80% at 50% 10%, rgba(78,205,196,.25), transparent 60%), linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));"></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Photo Contact Sheet</h3>
-                            <p class="card-text">Tiny tool: drag in photos, get a high-contrast printable contact sheet.</p>
-                            <span class="card-cta">View on GitHub →</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Case Study (Levi's Example - From Claude, updated with Gemini Content) -->
         <section id="levis" class="case-study">
@@ -6421,6 +6338,12 @@
                                 <span class="folder-subtitle">Streaming Transformation</span>
                                 <div class="folder-indicator"></div>
                             </button>
+                            <button class="folder-tab" data-folder="emmys">
+                                <span class="folder-icon">📁</span>
+                                <span class="folder-title">Emmys OOH Hijack</span>
+                                <span class="folder-subtitle">Awards Night Takeover</span>
+                                <div class="folder-indicator"></div>
+                            </button>
                                 </div>
 
                         <!-- Folder Content -->
@@ -6493,6 +6416,36 @@
                                         <div class="photo-caption-cs"><h5>Campaign Hero</h5><p>Hollywood glow‑ups meet a streaming glow‑up.</p></div>
                             </div>
                                 </div>
+                        </div>
+
+                        <!-- Folder: Emmys OOH Hijack -->
+                        <div class="folder-content" id="emmys">
+                            <div class="cs-section overview-section">
+                                <div class="cs-section-header">
+                                    <h4>Emmys OOH Hijack — Awards Night Takeover</h4>
+                                    <div class="section-divider"></div>
+                                </div>
+                                <p class="cs-paragraph">A real‑time out‑of‑home hijack during the Emmys, engineered to intercept cultural attention at peak moment. Built fast with a newsroom mindset: listen, concept, deploy — within hours. Creative aligned to DIRECTV’s streaming transformation narrative and sports leadership while tapping into awards‑night buzz.</p>
+                                <p class="cs-paragraph">Rolled across high‑impact digital OOH near venues and entertainment corridors, complemented by paid social that mirrored the creative within minutes. The takeaway: meet the moment, move the conversation, and point to a product truth.</p>
+                            </div>
+                            <div class="campaign-highlights cs-section">
+                                <div class="highlight-grid">
+                                    <div class="highlight-card"><h5>Objective</h5><p>Culture hijack to boost consideration in real time</p></div>
+                                    <div class="highlight-card"><h5>Timing</h5><p>Live during the Emmys broadcast window</p></div>
+                                    <div class="highlight-card"><h5>Distribution</h5><p>Digital OOH, Paid Social, Influencers</p></div>
+                                    <div class="highlight-card"><h5>Role</h5><p>Connections Strategy, Real‑time Orchestration</p></div>
+                                </div>
+                            </div>
+                            <div class="photo-gallery-cs grid col-1 cs-section">
+                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/Emmys/1.jpg" data-title="Emmys OOH — Key Visual" data-caption="Primary creative near awards corridor.">
+                                    <img src="Brand Imagery/Directv/Emmys/1.jpg" alt="DIRECTV Emmys OOH Key Visual" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Key Visual</h5><p>High‑impact placement during the broadcast window.</p></div>
+                                </div>
+                                <div class="photo-card-cs gallery-item" data-src="Brand Imagery/Directv/Emmys/2.jpg" data-title="Emmys OOH — Variant" data-caption="Alternate cut tailored for social cross‑posting.">
+                                    <img src="Brand Imagery/Directv/Emmys/2.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
+                                    <div class="photo-caption-cs"><h5>Variant</h5><p>Format‑fit creative for secondary sites.</p></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
